# project-xray

./: .gitignore  API.md  ARCHITECTURE.md  DECISIONS.md  Makefile  PROGRESS.md  README.md  USER_INPUT.md  docker-compose.yml
api/: Dockerfile  Makefile  README.md  go.mod  go.sum
api/cmd/server/: main.go
api/internal/handlers/: ingest.go  query.go
api/internal/models/: models.go  requests.go
api/internal/store/: store.go
api/internal/store/clickhouse/: decision_operations.go  event_operations.go  models.go  query_operations.go  schema.go  store.go  trace_operations.go
api/internal/store/dynamodb/: decision_operations.go  event_operations.go  helpers.go  keys.go  query_operations.go  store.go  trace_operations.go
api/internal/uuidv7/: uuidv7.go
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/pipelines/: page.tsx
dashboard/src/app/traces/: page.tsx
dashboard/src/components/charts/: DecisionFunnel.tsx  OutcomeChart.tsx  ReasonCodeBreakdown.tsx  StepFlowDiagram.tsx  index.ts
dashboard/src/utils/: api.ts  colors.ts
scripts/: init-dynamodb.sh
sdk/go/: Makefile  README.md  client.go  client_test.go  config.go  doc.go  errors.go  event.go  go.mod  id.go  models.go  query.go  sampling.go  trace.go  types.go
sdk/go/examples/basic/: main.go
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: competitor_selection.py  demo_pipeline.py  last_trace_id.txt
sdk/python/xray_sdk/: __init__.py  client.py  config.py  decision.py  event.py  models.py  query.py  trace.py  types.py
(+7 files in other folders)
